--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ repository = "https://github.com/DioxusLabs/blitz"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
-dioxus-native-core = { git = "https://github.com/DioxusLabs/dioxus" }
-dioxus-native-core-macro = { git = "https://github.com/DioxusLabs/dioxus" }
+dioxus = { git = "https://github.com/DioxusLabs/dioxus/commit/020c4bf0f8f811178d7ef52637db7aa9071fa759" }
+dioxus-native-core = { git = "https://github.com/DioxusLabs/dioxus/commit/020c4bf0f8f811178d7ef52637db7aa9071fa759" }
+dioxus-native-core-macro = { git = "https://github.com/DioxusLabs/dioxus/commit/020c4bf0f8f811178d7ef52637db7aa9071fa759" }
 taffy = "0.1"
 tokio = { version = "1.17.0", features = ["full"] }
 parcel_css = "1.0.0-alpha.32"
